--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <div class="container">
     <h2>Win a Caribbean Getaway for Two!</h2>
-    <img src="https://your-image-link.com/image.jpg" alt="Caribbean getaway" style="width: 100%;">
+    <img src="https://imgur.com/a/IScVPoX" alt="Caribbean getaway" style="width: 100%;">
     <p>Enter your email for a chance to win!</p>
     <div id="countdown">Offer expires in: 10:00</div>
     <input type="email" placeholder="Enter your email address" required>
