--- a/index.html
+++ b/index.html
@@ -1,79 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Win a Caribbean Getaway!</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background: radial-gradient(circle, #00b894, #2ecc71);
-      color: white;
-      text-align: center;
-      padding: 20px;
-    }
-    .container {
-      max-width: 400px;
-      margin: auto;
-      background-color: #ffffff20;
-      padding: 20px;
-      border-radius: 15px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
-    }
-    input[type="email"] {
-      width: 100%;
-      padding: 12px;
-      margin: 10px 0;
-      border-radius: 5px;
-      border: none;
-    }
-    button {
-      background-color: #27ae60;
-      color: white;
-      border: none;
-      padding: 12px;
-      width: 100%;
-      border-radius: 5px;
-      font-size: 16px;
-    }
-    #countdown {
-      font-size: 18px;
-      margin: 10px 0;
-      color: yellow;
-    }
-    img {
-      max-width: 100%;
-      border-radius: 10px;
-    }
-  </style>
 </head>
-<body>
+<body style="font-family: Arial; text-align: center; background-color: #f0f8ff; padding: 20px;">
 
-  <div class="container">
-    <h2>Win a Caribbean Getaway for Two!</h2>
-    <img src="https://imgur.com/a/IScVPoX" alt="Caribbean getaway" style="width: 100%;">
-    <p>Enter your email for a chance to win!</p>
-    <div id="countdown">Offer expires in: 10:00</div>
-    <input type="email" placeholder="Enter your email address" required>
-    <a href="https://smrturl.co/a/s020b612f18/1511?s1=fbclick1">
-      <button>Continue</button>
-    </a>
-  </div>
+  <h1>🌴 Win a Caribbean Getaway for Two! 🌞</h1>
 
-  <script>
-    let timeLeft = 600; // 10 minutes in seconds
-    const countdown = document.getElementById("countdown");
-    setInterval(() => {
-      if (timeLeft > 0) {
-        timeLeft--;
-        const minutes = Math.floor(timeLeft / 60);
-        const seconds = timeLeft % 60;
-        countdown.textContent = `Offer expires in: ${minutes}:${seconds.toString().padStart(2, '0')}`;
-      } else {
-        countdown.textContent = "Offer expired!";
-      }
-    }, 1000);
-  </script>
+  <img src="https://i.imgur.com/sWUtZ7K.jpg" alt="Caribbean" style="max-width: 100%; height: auto; border-radius: 12px;"/>
+
+  <p style="font-size: 18px; margin-top: 20px;">
+    Enter your email now for a chance to win a dream vacation! 🏖️ <br>
+    Limited time offer – Don't miss out!
+  </p>
+
+  <a href="https://smrturl.co/a/s020b612f18/1511?s1=fbclick1" 
+     style="display: inline-block; padding: 15px 30px; background-color: #ff5722; color: white; font-size: 18px; border-radius: 8px; text-decoration: none; margin-top: 20px;">
+    ✈️ Claim Your Spot!
+  </a>
 
 </body>
 </html>
