--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <h1>🌴 Win a Caribbean Getaway for Two! 🌞</h1>
 
-  <img src="https://i.imgur.com/sWUtZ7K.jpg" alt="Caribbean" style="max-width: 100%; height: auto; border-radius: 12px;"/>
+  <img src="https://cdn.pixabay.com/photo/2016/11/29/03/53/beach-1867285_1280.jpg" alt="Caribbean" style="max-width: 100%; height: auto; border-radius: 12px;"/>
 
   <p style="font-size: 18px; margin-top: 20px;">
     Enter your email now for a chance to win a dream vacation! 🏖️ <br>
