--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Win a Caribbean Getaway!</title>
 </head>
-<body style="font-family: Arial; text-align: center; background-color: #f0f8ff; padding: 20px;">
-
+<body style="font-family: Arial, sans-serif; background: #eaf7ff; text-align: center; padding: 20px;">
   <h1>🌴 Win a Caribbean Getaway for Two! 🌞</h1>
 
-  <img src="https://cdn.pixabay.com/photo/2016/11/29/03/53/beach-1867285_1280.jpg" alt="Caribbean" style="max-width: 100%; height: auto; border-radius: 12px;"/>
+  <!-- الصورة -->
+  <img src="caribbean.jpg" alt="Caribbean Beach" style="max-width: 100%; border-radius: 15px; margin-top: 15px;" />
 
+  <!-- الوصف -->
   <p style="font-size: 18px; margin-top: 20px;">
-    Enter your email now for a chance to win a dream vacation! 🏖️ <br>
-    Limited time offer – Don't miss out!
+    Enter your email now for a chance to win a dream vacation! 🏖️<br>
+    Limited time offer – Don’t miss out!
   </p>
 
-  <a href="https://smrturl.co/a/s020b612f18/1511?s1=fbclick1" 
-     style="display: inline-block; padding: 15px 30px; background-color: #ff5722; color: white; font-size: 18px; border-radius: 8px; text-decoration: none; margin-top: 20px;">
+  <!-- الزر -->
+  <a href="https://smrturl.co/a/s020b612f18/1511?s1=fbclick1" style="display: inline-block; margin-top: 20px; padding: 15px 30px; background-color: #ff5722; color: white; font-size: 18px; border-radius: 10px; text-decoration: none;">
     ✈️ Claim Your Spot!
   </a>
-
 </body>
 </html>
