--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <h1>🌴 Win a Caribbean Getaway for Two! 🌞</h1>
 
   <!-- الصورة -->
-  <img src="caribbean.jpg" alt="Caribbean Beach" style="max-width: 100%; border-radius: 15px; margin-top: 15px;" />
+  <img src="caribbean.jpg" alt="Caribbean Beach" style="max-width: 100%; border-radius: 10px;">
 
   <!-- الوصف -->
   <p style="font-size: 18px; margin-top: 20px;">
