--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Win a Caribbean Getaway!</title>
+  <meta charset="UTF-8">
+  <title>Win a Caribbean Getaway</title>
 </head>
-<body style="font-family: Arial, sans-serif; background: #eaf7ff; text-align: center; padding: 20px;">
-  <h1>🌴 Win a Caribbean Getaway for Two! 🌞</h1>
+<body style="text-align: center; font-family: Arial; padding: 20px; background-color: #f0f8ff;">
 
-  <!-- الصورة -->
-  <img src="caribbean.jpg" alt="Caribbean Beach" style="max-width: 100%; border-radius: 10px;">
+  <h1>🌴 Dream Caribbean Getaway 🌞</h1>
 
-  <!-- الوصف -->
+  <!-- صورة من موقع Unsplash – تظهر بدون مشاكل -->
+  <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e" 
+       alt="Caribbean Beach" 
+       style="max-width: 90%; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.2);">
+
   <p style="font-size: 18px; margin-top: 20px;">
-    Enter your email now for a chance to win a dream vacation! 🏖️<br>
-    Limited time offer – Don’t miss out!
+    Enter your email and zip code now to win a vacation for two! 🏖️
   </p>
 
-  <!-- الزر -->
-  <a href="https://smrturl.co/a/s020b612f18/1511?s1=fbclick1" style="display: inline-block; margin-top: 20px; padding: 15px 30px; background-color: #ff5722; color: white; font-size: 18px; border-radius: 10px; text-decoration: none;">
-    ✈️ Claim Your Spot!
+  <!-- زر العرض -->
+  <a href="https://smrturl.co/a/s020b612f18/1511?s1=fbclick1" 
+     style="display: inline-block; margin-top: 20px; padding: 12px 24px; background-color: #007bff; color: white; text-decoration: none; border-radius: 8px; font-size: 18px;">
+    ✈️ Claim Now
   </a>
+
 </body>
 </html>
