--- a/index.html
+++ b/index.html
@@ -3,24 +3,54 @@
 <head>
   <meta charset="UTF-8">
   <title>Win a Caribbean Getaway</title>
+  <style>
+    body {
+      text-align: center;
+      font-family: Arial, sans-serif;
+      padding: 20px;
+      background-color: #f0f8ff;
+    }
+    img {
+      max-width: 90%;
+      border-radius: 15px;
+      border: 4px solid #00bcd4;
+      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
+      margin-top: 20px;
+    }
+    .cta {
+      font-size: 20px;
+      margin-top: 25px;
+      color: #333;
+    }
+    .button {
+      display: inline-block;
+      margin-top: 25px;
+      padding: 15px 30px;
+      background-color: #007bff;
+      color: white;
+      text-decoration: none;
+      font-size: 20px;
+      border-radius: 10px;
+      transition: background-color 0.3s;
+    }
+    .button:hover {
+      background-color: #0056b3;
+    }
+  </style>
 </head>
-<body style="text-align: center; font-family: Arial; padding: 20px; background-color: #f0f8ff;">
+<body>
 
-  <h1>🌴 Dream Caribbean Getaway 🌞</h1>
+  <h1>🌴 Win a Caribbean Getaway! 🌞</h1>
 
-  <!-- صورة من موقع Unsplash – تظهر بدون مشاكل -->
-  <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e" 
-       alt="Caribbean Beach" 
-       style="max-width: 90%; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.2);">
+  <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e" alt="Caribbean Beach">
 
-  <p style="font-size: 18px; margin-top: 20px;">
-    Enter your email and zip code now to win a vacation for two! 🏖️
+  <p class="cta">
+    Just enter your <strong>email</strong> and <strong>zip code</strong> to get a chance to win a dream vacation for two!<br>
+    💌 Don’t miss this once-in-a-lifetime opportunity!
   </p>
 
-  <!-- زر العرض -->
-  <a href="https://smrturl.co/a/s020b612f18/1511?s1=fbclick1" 
-     style="display: inline-block; margin-top: 20px; padding: 12px 24px; background-color: #007bff; color: white; text-decoration: none; border-radius: 8px; font-size: 18px;">
-    ✈️ Claim Now
+  <a href="https://smrturl.co/a/s020b612f18/1511?s1=fbclick1" class="button">
+    ✈️ Claim Your Spot Now
   </a>
 
 </body>
