--- a/index.html
+++ b/index.html
@@ -1,38 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Win a Caribbean Getaway</title>
   <style>
     body {
-      text-align: center;
-      font-family: Arial, sans-serif;
-      padding: 20px;
+      margin: 0;
+      padding: 0;
+      font-family: 'Arial', sans-serif;
       background-color: #f0f8ff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      text-align: center;
+      padding: 20px;
     }
+
     img {
-      max-width: 90%;
+      width: 100%;
+      max-width: 400px;
       border-radius: 15px;
       border: 4px solid #00bcd4;
       box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
-      margin-top: 20px;
     }
+
+    h1 {
+      font-size: 24px;
+      color: #007bff;
+      margin-bottom: 15px;
+    }
+
     .cta {
-      font-size: 20px;
-      margin-top: 25px;
+      font-size: 16px;
+      margin-top: 15px;
       color: #333;
+      line-height: 1.5;
     }
+
     .button {
-      display: inline-block;
       margin-top: 25px;
-      padding: 15px 30px;
+      padding: 12px 24px;
       background-color: #007bff;
       color: white;
       text-decoration: none;
-      font-size: 20px;
+      font-size: 18px;
       border-radius: 10px;
-      transition: background-color 0.3s;
+      display: inline-block;
     }
+
     .button:hover {
       background-color: #0056b3;
     }
@@ -42,11 +60,11 @@
 
   <h1>🌴 Win a Caribbean Getaway! 🌞</h1>
 
-  <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e" alt="Caribbean Beach">
+  <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e" alt="Caribbean Beach" />
 
   <p class="cta">
-    Just enter your <strong>email</strong> and <strong>zip code</strong> to get a chance to win a dream vacation for two!<br>
-    💌 Don’t miss this once-in-a-lifetime opportunity!
+    Just enter your <strong>email</strong> and <strong>zip code</strong> to get a chance<br>
+    to win a dream vacation for two! 💌
   </p>
 
   <a href="https://smrturl.co/a/s020b612f18/1511?s1=fbclick1" class="button">
